--- a/manifest.json
+++ b/manifest.json
@@ -28,5 +28,7 @@
             "js":["jquery-3.1.1.min.js", "angular.js", "popup.js"],
             "run_at": "document_end"
         }
-    ]
+    ],
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+
 }
