--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
   "icons": { "128": "images/icon.png" },
   "web_accessible_resources": ["icon.png"],
   "background": {
-    "scripts": ["angular.js", "popup.js"], 
+    "scripts": ["angular.js", "jquery-3.1.1.min.js", "background.js"], 
+    //"page": "background.html",
     "persistent": false
   },
 
@@ -18,7 +19,8 @@
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com/",
-    "storage"
+    "storage",
+    "tabs"
   ],
 
   "content_scripts": 
