--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "This extension stores where you left off on your favourite streamed shows!",
   "version": "1.0",
   "icons": { "128": "images/icon.png" },
-  "web_accessible_resources": ["icon.png"],
+  "web_accessible_resources": ["icon.png", "add.svg", "remove.svg"],
   "background": {
     "scripts": ["angular.js", "jquery-3.1.1.min.js",  "background.js"], 
     //"page": "background.html",
@@ -27,7 +27,7 @@
     [
         {
             "matches":["http://*/*"],
-            "js":["jquery-3.1.1.min.js", "angular.js", "popup.js", "domgrabber.js"],
+            "js":["jquery-3.1.1.min.js", "bootstrap.min.css", "angular.js", "popup.js", "domgrabber.js"],
             "run_at": "document_end"
         }
     ],
