--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,12 @@
   "manifest_version": 2,
 
   "name": "EpisodeBrain",
-  "description": "This extension stores where you left off on your favourite streamed shows!",
-  "version": "1.0",
+  "description": "Stop worrying about episode numbers and continue enjoying your favourite shows!",
+  "version": "1.1",
   "icons": { "128": "images/icon.png" },
   "web_accessible_resources": ["icon.png", "add.svg", "remove.svg"],
   "background": {
     "scripts": ["angular.js", "jquery-3.1.1.min.js",  "background.js"], 
-    //"page": "background.html",
     "persistent": false
   },
 
